PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, Version 4.3.7
- Fixed possible crash inside pg_copy_(to|from) function if delimiter is more
  then 1 character long. (Ilia)
- Fixed handling of return values from storred procedures in mssql_execute()
  with multiple result sets returned. (Frank)
- Fixed logic bug in session_register() which allowed registering _SESSION
  and/or HTTP_SESSION_VARS. (Sara)
- Fixed bug #28229 (run-tests tripped up by spaces in names). (Marcus)
- Fixed bug #28228 (number_format() does not allow empty decimal separator).
  (Ilia)
- Fixed bug #28196 (missing error constants in cURL extension). (Ilia)
- Fixed bug #28187 (parse_url() not handling embedded IPv6 in URLs). (Sara)
- Fixed bug #28147 (Crash with drawing anti-aliased lines). (Derick)
- Fixed bug #28112 (sqlite_query() crashing apache on malformed query). (Ilia,
  Marcus)
- Fixed bug #28055 (timeout duration too long in feof()/pfsockopen() liveness
  checks). (Wez)
- Fixed bug #28087 (Do not force mysql.trace_mode to 0 on every request).
  (Ilia)
- Fixed bug #28042 (greek letters in html to entitity mapping not correct).
  (Derick)
- Fixed bug #28007 (compile mssql extension with old versions of FreeTDS
  fails). (Frank)
- Fixed bug #27995 (imagefilltoborder() stops the fill process prematurely).
  (Ilia)
- Fixed bug #27810 (don't use php's pemalloc in ext/pcre). (Joe Orton)

15 Apr 2004, Version 4.3.6
- Updated bundled PDFLib library to version 5.0.3p1 in Windows distribution.
  (Edin)
- Fixed a crash in multi-threaded environments when a thread is shutdown by
  the web server. (Stas)
- Fixed a bug that prevented building of the GD extension against external GD
  lib 1.X. (Ilia, Edin, Nick Talbott).
- Synchronized bundled GD library with GD 2.0.22. (Ilia)
- Fixed bug #27963 (Session lifetime setting may leak between requests). (Ilia)